# cloud_infra

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CHANGELOG.md  GEMINI.md  README.md  SCENARIOS.md  gen-pdf.ps1  gen-pdf.sh  mkdocs.yml  package.json  pnpm-lock.yaml  project_outline.md  pyproject.toml  to-do-list.md  which_should_be_included.md
.husky/: post-merge  pre-commit
disk_mount/: clean_sdc.sh  make_sdc.sh  sdc_layout.txt
docs/: CHANGELOG.md  CORE_FEATURE_EXPLAINER.md  CURRENT_TASK_GUIDE.md  ENVIRONMENT_SETUP.md  INFRA_INVENTORY.md  PROJECT_WORKFLOW.md  SCENARIOS.md  index.md  project_outline.md  to-do-list.md
docs/build-up/: README.md
docs/case_studies/: 20260321_github_push_protection.md  20260408_precommit_troubleshooting.md  20260414_windows_env_troubleshooting.md  20260427_pip_audit_vulnerability_fix.md
docs/decisions/: ADR-001-db-setup-method.md  ADR-002-documentation-tool.md  ADR-003-source-management-strategy.md  ADR-004-data-persistence-strategy.md  ADR-005-quality-automation.md  ADR-006-task-management-strategy.md  ADR-007-ha-layered-strategy.md  ADR-008-tech-stack-rationale.md  README.md
docs/knowledge_base/: advanced_tech_guide.md  ceph_storage_deep_dive.md  common_infra_elements.md  full_tech_checklist.md  infra_inventory_management.md  infra_project_taxonomy.md  (+1 more)
knowledge_base/: advanced_tech_guide.md  analysis_and_improvement.md  full_tech_checklist.md
lecture/: vmware.md  webserver(apache,nginx).md  wsl.md
policies/: backup_policy.md
to-do-space/: README.md
vi편집기/: 3. vi 편집기 사용법.md
우분투커널빌드/: 우분투커널빌드.md
(+153 files in other folders)
