[project]
name = "cloud-infra"
version = "0.1.0"
description = "Cloud Infrastructure Project Documentation"
authors = [
    {name = "ksj686", email = "kim_se_joon@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "mkdocs-material>=9.7.6",
    "mkdocs-mermaid2-plugin>=1.2.3"
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1,<5.0.0",
    "pip-audit>=2.10.0,<3.0.0"
]
